# sermon-insight-wiki

./: .env.example  .gitignore  KNOWLEDGE_SCHEMA.md  LICENSE  Makefile  README.md  pyproject.toml
data/bibles/: README.md
frontend/: .env.development  ENHANCEMENTS.md  README.md  index.html  package.json  vite.config.ts
frontend/src/api/: client.ts  endpoints.ts  mappers.ts  types.ts
frontend/src/app/: routes.tsx
frontend/src/app/components/: SemanticSearch.tsx  VideoList.tsx  VideoProcessor.tsx
frontend/src/app/components/chrome/: AppShell.tsx  PrimaryNav.tsx
frontend/src/app/components/data/: InlineHelp.tsx  Pill.tsx  SermonListRow.tsx  StatTile.tsx  StatusBanner.tsx
frontend/src/app/components/intel/: IndexNudge.tsx  IndexStatus.tsx  RAGAnswerCard.tsx  SearchEmpty.tsx  SearchNoResults.tsx  SourceResultRow.tsx
frontend/src/app/components/layout/: Breadcrumb.tsx  PageContainer.tsx  PageHeader.tsx  Section.tsx
frontend/src/app/components/ops/: APIStatusCard.tsx  PipelineBanner.tsx  QueueRow.tsx  (+1 more)
frontend/src/app/pages/: Home.tsx  Pipeline.tsx  Repository.tsx  Search.tsx  SermonDetail.tsx
frontend/src/imports/pasted_text/: figma-ui-spec-enhancements.md  sermon-insight-plan.md
frontend/src/styles/: theme.css
src/sermon_insight_wiki/: __init__.py  app.py  bible_books.py  bible_xml.py  cli.py  config.py  dashboard_data.py  evidence.py  graph_builder.py  retrieval.py  scripture_context.py  semantic_search.py  wiki_ingest.py  wiki_lint.py  wiki_query.py
tools/: build_graph.py  ingest.py  lint.py  query.py
wiki/: index.md  log.md  overview.md
(+7 files in other folders)
