[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sermon-insight-wiki"
version = "0.1.0"
description = "Sermon corpus RAG + structured wiki, evidence graph, hybrid retrieval, and graph analytics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RGConsulting12" }]
dependencies = [
  "openai>=1.40.0",
  "numpy>=1.24.0",
  "python-dotenv>=1.0.0",
  "networkx>=3.2.0",
  "flask>=3.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]

[project.scripts]
siw-ingest = "sermon_insight_wiki.cli:ingest_main"
siw-graph = "sermon_insight_wiki.cli:graph_main"
siw-query = "sermon_insight_wiki.cli:query_main"
siw-lint = "sermon_insight_wiki.cli:lint_main"

[tool.setuptools.packages.find]
where = ["src"]
